[gd_scene load_steps=29 format=3 uid="uid://dvp0bwc25fdph"]

[ext_resource type="Script" path="res://main/main_game.gd" id="1_f6uxc"]
[ext_resource type="Texture2D" uid="uid://k5yvohgmxacm" path="res://ui/background/512blue01.png" id="2_ng35q"]
[ext_resource type="FontFile" uid="uid://d33k0h6vwcvfv" path="res://ui/fonts/Kenney Pixel.ttf" id="3_h7q7t"]
[ext_resource type="Texture2D" uid="uid://cjl8aias636r" path="res://map/textures/crosshair.png" id="4_ake4l"]
[ext_resource type="Texture2D" uid="uid://cyllwctvcap56" path="res://ui/bars/hp_off.png" id="4_lo5tw"]
[ext_resource type="Texture2D" uid="uid://djxewul5gjqyo" path="res://ui/bars/hp_on.png" id="5_c42ok"]
[ext_resource type="Texture2D" uid="uid://c8jc53bfeos3e" path="res://ui/bars/shield_off.png" id="6_ne5qc"]
[ext_resource type="Texture2D" uid="uid://n5jlmes6ayqm" path="res://ui/bars/shield_on.png" id="7_6pu8t"]
[ext_resource type="Texture2D" uid="uid://b0ypebv786s6x" path="res://ui/bars/bar_bg.png" id="8_21ngp"]
[ext_resource type="PackedScene" uid="uid://rksgnk4xyy3i" path="res://ui/skill_button.tscn" id="8_ym3ti"]
[ext_resource type="Texture2D" uid="uid://dodl322oapg6q" path="res://ui/icons/beam_wake.png" id="9_2vqa0"]
[ext_resource type="Texture2D" uid="uid://dombdvijggkft" path="res://ui/bars/bar_fg.png" id="9_kcvpo"]
[ext_resource type="Texture2D" uid="uid://cxelifpthfi5t" path="res://ui/icons/missile_pod.png" id="10_32a5w"]
[ext_resource type="Texture2D" uid="uid://c4camuckntjir" path="res://ui/bars/bar_fill.png" id="10_ss2gi"]
[ext_resource type="Texture2D" uid="uid://y3pee7di0he2" path="res://ui/icons/spiky_field.png" id="11_bog4h"]
[ext_resource type="FontFile" uid="uid://d318d5a8yf3rs" path="res://ui/fonts/Kenney Future.ttf" id="12_17y41"]
[ext_resource type="PackedScene" uid="uid://ssmrmcx8ya76" path="res://map/star_map.tscn" id="13_rcvrq"]
[ext_resource type="Environment" path="res://effects/env_glow.tres" id="14_q4r8s"]

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Boss:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Boss:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Cutscene/Intro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/Cutscene/Outro:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/Cutscene/Outro:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/Cutscene/Intro:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "intro_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Intro:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Intro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="10"]
resource_name = "intro_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Intro:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Intro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="8"]
resource_name = "outro_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Outro:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Outro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="11"]
resource_name = "outro_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Outro:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Outro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "warning_flash"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Cutscene/Boss:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Cutscene/Boss:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tu1i1"]
_data = {
"RESET": SubResource("6"),
"intro_in": SubResource("7"),
"intro_out": SubResource("10"),
"outro_in": SubResource("8"),
"outro_out": SubResource("11"),
"warning_flash": SubResource("9")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4mg0"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.3, 0.3, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="Gradient" id="Gradient_oe4ow"]
colors = PackedColorArray(0, 0, 0.2, 1, 0, 0, 0.8, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7f2sh"]
gradient = SubResource("Gradient_oe4ow")
height = 96
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)
metadata/_snap_enabled = true

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6uxc")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tu1i1")
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 512)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("2_ng35q")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 720)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="PanelContainer" parent="UI"]
texture_filter = 1
custom_minimum_size = Vector2(360, 720)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v4mg0")

[node name="Content" type="VBoxContainer" parent="UI/HUD"]
modulate = Color(0.9, 0.9, 0.9, 1)
layout_mode = 2

[node name="Header" type="Label" parent="UI/HUD/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 48
text = "ROUTE"
horizontal_alignment = 1

[node name="Map" type="TextureRect" parent="UI/HUD/Content"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
texture = SubResource("GradientTexture2D_7f2sh")

[node name="Route" type="Line2D" parent="UI/HUD/Content/Map"]
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Points" type="Node2D" parent="UI/HUD/Content/Map"]

[node name="Marker" type="Sprite2D" parent="UI/HUD/Content/Map"]
texture = ExtResource("4_ake4l")

[node name="Payout" type="Label" parent="UI/HUD/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 48
text = "PAYOUT:"

[node name="LblShip" type="Label" parent="UI/HUD/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 48
text = "SHIP"
horizontal_alignment = 1

[node name="Hull" type="HBoxContainer" parent="UI/HUD/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HUD/Content/Hull"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "HULL"

[node name="BarHP" type="TextureProgressBar" parent="UI/HUD/Content/Hull"]
layout_mode = 2
max_value = 5.0
value = 5.0
texture_under = ExtResource("4_lo5tw")
texture_progress = ExtResource("5_c42ok")

[node name="Shield" type="HBoxContainer" parent="UI/HUD/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HUD/Content/Shield"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "SHIELD"

[node name="BarShield" type="TextureProgressBar" parent="UI/HUD/Content/Shield"]
layout_mode = 2
max_value = 5.0
value = 5.0
texture_under = ExtResource("6_ne5qc")
texture_progress = ExtResource("7_6pu8t")

[node name="Cargo" type="HBoxContainer" parent="UI/HUD/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HUD/Content/Cargo"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "CARGO"

[node name="BarCargo" type="TextureProgressBar" parent="UI/HUD/Content/Cargo"]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("8_21ngp")
texture_over = ExtResource("9_kcvpo")
texture_progress = ExtResource("10_ss2gi")

[node name="LblEquip" type="Label" parent="UI/HUD/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 48
text = "EQUIPMENT"
horizontal_alignment = 1

[node name="Equip" type="HBoxContainer" parent="UI/HUD/Content"]
modulate = Color(0.9, 0.9, 0.9, 1)
layout_mode = 2
size_flags_vertical = 0

[node name="SkillButton" parent="UI/HUD/Content/Equip" instance=ExtResource("8_ym3ti")]
layout_mode = 2
texture_normal = ExtResource("9_2vqa0")
cooldown_time = 10.0

[node name="SkillButton2" parent="UI/HUD/Content/Equip" instance=ExtResource("8_ym3ti")]
layout_mode = 2
texture_normal = ExtResource("10_32a5w")
cooldown_time = 10.0
hotkey = "X"

[node name="SkillButton3" parent="UI/HUD/Content/Equip" instance=ExtResource("8_ym3ti")]
layout_mode = 2
texture_normal = ExtResource("11_bog4h")
cooldown_time = 10.0
hotkey = "C"

[node name="Cutscene" type="Control" parent="UI"]
modulate = Color(0.9, 0.9, 0.9, 1)
custom_minimum_size = Vector2(920, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Intro" type="Label" parent="UI/Cutscene"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -37.5
offset_right = 214.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 32
text = "Entering Sector
All Systems Green"
horizontal_alignment = 1

[node name="Outro" type="Label" parent="UI/Cutscene"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -19.5
offset_right = 88.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 32
text = "Sector Clear
Initiating jump..."
horizontal_alignment = 1

[node name="Boss" type="VBoxContainer" parent="UI/Cutscene"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -58.0
offset_right = 177.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Label" parent="UI/Cutscene/Boss"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 16
text = "Large Mass Approaching"
horizontal_alignment = 1

[node name="Title" type="Label" parent="UI/Cutscene/Boss"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 64
text = "WARNING"
horizontal_alignment = 1

[node name="Bottom" type="Label" parent="UI/Cutscene/Boss"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 16
text = "Large Mass Approaching"
horizontal_alignment = 1

[node name="Title" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.0
offset_top = -110.0
offset_right = 379.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 64
text = "Starlane Runner"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 32
text = "Another Day, Another Run"
horizontal_alignment = 1

[node name="BtnNewGame" type="Button" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="BtnLoadGame" type="Button" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "Load Game"

[node name="BtnOptions" type="Button" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="BtnAbout" type="Button" parent="UI/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "About / Instructions"

[node name="GameOver" type="VBoxContainer" parent="UI"]
visible = false
modulate = Color(0.9, 0.9, 0.9, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -73.5
offset_right = 225.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Text" type="Label" parent="UI/GameOver"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_17y41")
theme_override_font_sizes/font_size = 32
text = "GAME OVER
YEEEEEEEEEAAAAHH!"
horizontal_alignment = 1

[node name="BtnRestart" type="Button" parent="UI/GameOver"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="BtnQuit" type="Button" parent="UI/GameOver"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7q7t")
theme_override_font_sizes/font_size = 32
text = "Quit to Title"

[node name="StarMap" parent="UI" instance=ExtResource("13_rcvrq")]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("14_q4r8s")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="UI/Title/BtnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="UI/Title/BtnLoadGame" to="." method="_on_btn_load_game_pressed"]
[connection signal="pressed" from="UI/Title/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="UI/Title/BtnAbout" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="UI/GameOver/BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="pressed" from="UI/GameOver/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="mission_confirmed" from="UI/StarMap" to="." method="_on_mission_confirmed"]
